@@ -164,11 +164,20 @@ public class FptrParameters {
     public boolean printRecVoidItemAmount = false;
     public boolean FSReceiptItemDiscountEnabled = false;
     public boolean quantityCorrectionEnabled = true;
+    public long taxValue[] = new long[6];
+    public int taxSystem = 0;
 
     public FptrParameters() throws Exception {
         font = new FontNumber(PrinterConst.FONT_NUMBER_NORMAL);
         subtotalFont = new FontNumber(PrinterConst.FONT_NUMBER_NORMAL);
         discountFont = new FontNumber(PrinterConst.FONT_NUMBER_NORMAL);
+        taxValue[0] = 0;
+        taxValue[1] = 0;
+        taxValue[2] = 0;
+        taxValue[3] = 0;
+        taxValue[4] = 0;
+        taxValue[5] = 0;
+        taxSystem = 0;
     }
 
     public void setDefaults() throws Exception {
