@@ -6,6 +6,13 @@
   
 ********************************************************************************
 
+  July 13 2017, 16:35
+  deviceServiceVersion = 1013452
+	
+  [-] Fixed error "104" on receipt close
+  
+********************************************************************************
+
   July 12 2017, 17:35
   deviceServiceVersion = 1013451
 	
